src/components/A11yStatus/A11yStatus.module.scss
.help {
  position: relative;
  padding-left: $spacing-03;
  top: $spacing-01;
}

.version,
.moreLink {
  --space: 1.5rem;
}

:global(.cds--definition-term),
:global(.cds--tag) {
  white-space: nowrap;
}

:global(.cds--tag .cds--popover) {
  white-space: normal;
}

// table view
.table {
  margin-top: $spacing-06;
}

// card view
.dropdown {
  :global(.cds--dropdown) {
    border-bottom-color: $border-subtle-01;
  }
}

.variant + .card-group,
.variant + .card-group ~ .card-group {
  --space: -1px;
}

.card-group :global(.cds--col-lg-4:nth-child(2n)) {
  @include breakpoint('lg') {
    margin-right: 33%;
  }
}

.card-group {
  :global(.cds--resource-card) {
    border-right: 1px solid $border-subtle-01;
    border-bottom: 1px solid $border-subtle-01;
  }
  :global(div:first-child .cds--resource-card),
  :global(div:nth-child(2) .cds--resource-card) {
    border-top: 1px solid $border-subtle-01;
  }
  :global(div:nth-child(odd) .cds--resource-card) {
    border-left: 1px solid $border-subtle-01;
  }
}

.hidden {
  @include visually-hidden;
}

